# Udacity-disaster-response-project

./: .gitignore  README.md  pyproject.toml
app/: run.py
app/templates/: go.html  master.html
data/: process_data.py
models/: train_classifier.py
