[tool.poetry]
name = "disaster-response-project"
version = "0.1.0"
description = ""
authors = ["Marcus <m56330@eon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
nltk = "^3.9.1"
scikit-learn = "^1.5.2"
flask = "^3.1.0"
plotly = "^5.24.1"
joblib = "^1.4.2"
langdetect = "^1.0.9"
langcodes = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
